[project]
name = "sae-experiments"
version = "0.1.0"
description = "A repository for running experiments on SAEs with SAELens"
authors = [
    {name = "Daniel CH Tan", email = "dtch1997@users.noreply.github.com"},
]
dependencies = [
    "sae-lens @ git+https://github.com/dtch1997/SAELens.git@feat-gated-sae",
    "lxm3>=0.4.2",
    "simple-parsing>=0.1.5",
    "python-dotenv>=1.0.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
